for explicit goal states, e.g. the following proof texts coincide with
certain special cases of literal facts:

  have "A" by fact                 ==  note `A`
  have "A ==> B" by fact           ==  note `A ==> B`
  have "!!x. P x ==> Q x" by fact  ==  note `!!x. P x ==> Q x`
  have "P a ==> Q a" by fact       ==  note `P a ==> Q a`

* Provers/induct: improved internal context management to support
local fixes and defines on-the-fly.  Thus explicit meta-level
connectives !! and ==> are rarely required anymore in inductive goals
(using object-logic connectives for this purpose has been long
obsolete anyway).  The subsequent proof patterns illustrate advanced
techniques of natural induction; general datatypes and inductive sets
work analogously (see also src/HOL/Lambda for realistic examples).

(1) This is how to ``strengthen'' an inductive goal wrt. certain
parameters:

  lemma
    fixes n :: nat and x :: 'a
    assumes a: "A n x"
    shows "P n x"
    using a                     -- {* make induct insert fact a *}
  proof (induct n fixing: x)    -- {* generalize goal to "!!x. A n x ==> P n x" *}
    case 0
    show ?case sorry
  next
    case (Suc n)
    note `!!x. A n x ==> P n x` -- {* induction hypothesis, according to induction rule *}
    note `A (Suc n) x`          -- {* induction premise, stemming from fact a *}
    show ?case sorry
  qed

(2) This is how to perform induction over ``expressions of a certain
form'', using a locally defined inductive parameter n == "a x"
together with strengthening (the latter is usually required to get
sufficiently flexible induction hypotheses):

  lemma
    fixes a :: "'a => nat"
    assumes a: "A (a x)"
    shows "P (a x)"
    using a
  proof (induct n == "a x" fixing: x)
    ...

See also HOL/Isar_examples/Puzzle.thy for an application of the this
particular technique.

(3) This is how to perform existential reasoning ('obtain') by
induction, while avoiding explicit object-logic encodings:

  fix n :: nat